@@ -92,6 +92,47 @@ FSL_TEST_FUNCTION(expectations) {
 }
 
 
+FSL_TEST_FUNCTION(login) {
+    fostlib::url const profile{"https://example.com/me"},
+            login{"https://example.com/login"};
+
+    /// We want to test something like this function for fetching profile data
+    auto const do_login = [&]() {
+        /// A real implementation would take a username/password
+        fostlib::ua::headers heads;
+        auto bearer = fostlib::ua::post_json(
+                login, fostlib::json{"username/password"});
+        heads.set(
+                "Authorization",
+                "bearer=" + fostlib::coerce<fostlib::string>(bearer));
+        return heads;
+    };
+    auto const get_profile = [&](auto heads) {
+        try {
+            return fostlib::ua::get_json(profile, heads);
+        } catch (fostlib::ua::unauthorized &) {
+            auto authed = do_login();
+            return fostlib::ua::get_json(profile, authed);
+        }
+    };
+
+    /// This would be the test function we would want to write
+    fostlib::ua::ua_test test;
+
+    fostlib::ua::headers wrong, right;
+    wrong.set("Authorization", "bearer=FOO");
+    right.set("Authorization", "bearer=BAR");
+
+    fostlib::ua::expect(
+            "GET", profile, fostlib::ua::unauthorized{profile}, wrong);
+    fostlib::ua::expect_post(login, fostlib::json{"BAR"});
+    fostlib::ua::expect_get(profile, fostlib::json{"Profile data"}, right);
+
+    /// Now get the profile data
+    FSL_CHECK_EQ(get_profile(wrong), "Profile data");
+}
+
+
 /// ## Implementation details
 
 
